# IDSync

./: README.md  pyproject.toml
src/: __main__.py
src/atribute_model/: __init__.py  improved_model.py  model.py  train.py
src/atribute_model/data_prep/: augmentations.py  data_loader.py  dataset.py
src/blocks/backbones/: __init__.py  resnet.py
src/blocks/heads/: __init__.py  adaface.py  arcface.py
src/blocks/losses/: __init__.py  atribute_loss.py  fr_loss.py
src/common/: __init__.py  atribute_trainer.py  fr_trainer.py  utils.py
src/configs/: atribute_model.py  fr_model_casia.py  fr_model_idsync.py
src/diffusion_model/: atribute_model.py  clip_utils.py  create_synth_dataset.py  dataset_pca.py  id_pipeline.py  infer.py  precompute_dataset.py  train.py
src/fr_model/: __init__.py  evaluate.py  export.py  model.py  train.py
src/fr_model/data_prep/: augmentations.py  data_loader.py  datasets.py
